Fix: margins around dialogs for use on small screens

--- a/src/dialogs/Dialog.scss
+++ b/src/dialogs/Dialog.scss
@@ -3,6 +3,7 @@
 .dialog {
     background-color: white;
     border-radius: var(--border-radius, $border-radius);
+    margin: var(--element-margin, $element-margin);
     max-height: 32rem;
     min-height: 14rem;
     max-width: 48rem;
